--- a/Photo4All/res/layout/main.xml
+++ b/Photo4All/res/layout/main.xml
@@ -5,6 +5,16 @@
     android:gravity="center"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
+
     <Button
         android:id="@+id/scan_btn"
         android:layout_height="wrap_content"
@@ -31,6 +41,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button" />
+    
+      <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dip"
+            android:onClick="onImageGridClick"
+            android:text="@string/button_image_grid" />
 
 </LinearLayout>
 
